# Mesa-Protocol

./: .gitignore  ADR.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FULL_IMPL_4_TRACTION_NEXTSTEPS.md  LICENSE  MESA_MASTER_SPECIFICATION.md  MESA_REVIEW_AND_IMPROVEMENTS.md  MESA_ROADMAP.md  PHASE_2_NOTES.md  PHASE_4_NOTES.md  QUICKSTART.md  README.md  SCF_PROPOSAL.md  SECURITY.md  TEST_PLAN.md  competition.txt  docker-compose.yml  index.html  info.txt  package-lock.json  package.json  vercel.json  vite.config.js  vite.config.ts
.github/: pull_request_template.md
UI/: DESIGN.md  docs.html  export.html  index.html  studio.html  studio.js
create_a_circle_wizard/: code.html
create_proposal_review_step/: code.html
create_proposal_wizard/: code.html
docs/: getting-started.md
empty-project-test/: mesa.config.ts
fiat_on_off_ramp/: code.html
governance_overview/: code.html
group_savings_room/: code.html
js/: mesa-sdk.js
mesa-protocol/contracts/mesa-core/: Cargo.toml
mesa-protocol/contracts/mesa-core/src/: lib.rs  test.rs
mesa-protocol/contracts/mesa-core/test_snapshots/test/: test_activation.1.json  test_auction_payout_flow.1.json  test_contribute_and_distribute.1.json  test_distribute_before_all_paid_fails.1.json  test_emergency_mode_and_withdrawal.1.json  test_flag_emergency_flow.1.json  test_flag_missed.1.json  test_join_and_initial_state.1.json  test_penalty_and_forfeiture.1.json  test_round_1_contribution_and_distribution.1.json  test_vouching_and_reputation.1.json  test_withdraw_principal_emergency.1.json
(+81 files in other folders)
